todoapp/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-ns
  labels:
    name: todo-ns
