todoapp/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-app
  namespace: todo-ns
  labels:
    app: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: todo-app
        image: todo-app:v1
        ports:
        - containerPort: 8000
