todoapp/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: todo-ns
spec:
  type:  ClusterIP
  selector:
    app: todoapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
